--- a/project_listings/subpages/link-in-bio.html
+++ b/project_listings/subpages/link-in-bio.html
@@ -32,6 +32,6 @@
     <p>Perfect for Instagram profiles who want a clean, simple link hub.</p>
   </div>
 
-  <a href="../merged-listings.html" class="button">Back to Home</a>
+  <a href="../index.html" class="button">Back to Home</a>
   <button class="buy-now">Buy Now</button>
 </div>
