--- a/subpages/link-in-bio.html
+++ b/subpages/link-in-bio.html
@@ -29,9 +29,15 @@
     <p>Perfect for Instagram profiles who want a clean, simple link hub.</p>
   </div>
 
-  <a href="../index.html" class="button">Back to Home</a>
-  <button class="buy-now">Buy Now</button>
-</div>
+  <div class="button-row">
+    <a href="../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=InstaLinkBioPage—YourLinks,AllinOneSpot&amount=11.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
