--- a/subpages/link-in-bio.html
+++ b/subpages/link-in-bio.html
@@ -28,7 +28,7 @@
     <p>License for usage rights</p>
     <p>Perfect for Instagram profiles who want a clean, simple link hub.</p>
   </div>
-
+</div>
   <div class="button-row">
     <a href="../index.html" class="button">← Back to Home</a>
     
